--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,14 @@ dependencies:
   camera: ^0.5.8+8
   path_provider:
 
+  #The following adds the dependencies for image picker or uploading image.
+  image_picker: ^0.6.6+5
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
